TODO notes added

--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,7 @@ body {
 button {
   background: none;
   border: none;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .navs {
   padding-left: 10px;
