--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body .navbar {
 /***Header-Styles***/
 .header {
   width: 100%;
-  background: url(../images/background.jpg);
+  background: url(../images/1img.jpg);
   height: 1100px;
   overflow: hidden;
   background-size: cover;
@@ -158,7 +158,7 @@ form {
 /***Resume-Styles***/
 .resume_download {
   text-align: center;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 /***Portfolio-Styles***/
