--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,23 @@ body .navbar {
   text-align: center;
   margin-top: 400px; }
 
+.portfolio-section {
+  width: 100%;
+  background: url(../images/create.jpg);
+  height: 800px;
+  overflow: hidden;
+  /*padding-top: 150px;
+  padding-bottom: 150px;*/
+  margin-bottom: inherit;
+  background-size: cover;
+  background-position: 100%;
+  background-repeat: no-repeat;
+  /*display: flex;*/
+  align-items: center;
+  /*flex-direction: column;*/
+  /*flex-wrap: wrap;*/
+}
+
 .contact-section {
   width: 100%;
   background: url(../images/fireworks.jpg);
@@ -105,7 +122,7 @@ body .navbar {
 .page-footer {
   height: 110px; }
 
- .gl-container {
+.page-footer .container {
   padding-top: 25px;
   text-align: center; }
 
@@ -131,19 +148,17 @@ body .navbar {
   height: 120%;
   background-color: #2D2E40;
   position: absolute;
-  transform: skewY(-5deg); }
+  transform: skewY(-5deg); }*/
 
-.light-section {
+.portfolio-section {
   margin-top: 200px;
-  background-color: #fff;
-  color: #000;
-  padding: 150px 0 50px 0; }*/
+  background-color: #000;
+  color: #fff;
+  padding: 150px 0 50px 0; }
 
 .resume {
   margin: 0 auto; }
 
-.education {
-  margin-top: 50px; }
 
 
 /***Button-and-Form-Styles***/
@@ -190,8 +205,15 @@ input[name=name]:focus, input[name=_replyto]:focus, textarea[name=message]:focus
 }
 
 /***Portfolio-Styles***/
-.light-section img {
+.portfolio-section img {
   width: 250px; }
+
+.thumbnail {
+  background-color: #000;
+}
+/*.portfolio-section .container h3 {
+  color: #fff;
+}*/
 
 .piece {
   width: 250px;
